cleaned up dashboard tiles Files modified - [Main.html,CXAdmin.html,MyCompany.html,MunicipalityAdministration.html,MyMunicipality.html]

--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -13,7 +13,7 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn13" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-account-box"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn14" class="col-xs-9">
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn14" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="CX Subscriptions" class="p" fontsize="1.4" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.userSubscriptionsCount.dataSet[$i].userSubscriptionsCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -28,7 +28,7 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn15" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-people"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn16" class="col-xs-9">
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn16" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="CX Users" class="p" fontsize="1.4" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.UsersCount.dataSet[$i].usersCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -40,10 +40,10 @@
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageRoles.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid8">
                                 <wm-gridrow height="100%" name="gridrow10">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn22">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn22" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-account-circle"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn23">
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn23" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="CX Roles" class="p" fontsize="1.4" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -60,7 +60,7 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn11" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-account-balance"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn12" class="col-xs-9">
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn12" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="CX Municipalities" class="p" fontsize="1.4" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.MunicipalitiesCount.dataSet[$i].municipalitiesCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -75,7 +75,7 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn13_1" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-list"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn14_1" class="col-xs-9">
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn14_1" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="CX Forms" class="p" fontsize="1.4" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.CXAdminFormsCount.dataSet.value" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -87,10 +87,10 @@
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageCompanies.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid9">
                                 <wm-gridrow height="100%" name="gridrow11">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn24">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn24" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-work"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn25">
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn25" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="CX Companies" class="p" fontsize="1.4" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.VendorCount.dataSet[$i].VendorCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -107,7 +107,7 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn15_1" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-report"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn16_1" class="col-xs-9">
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn16_1" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Manage Reports" class="p" fontsize="1.4" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
