--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -27,8 +27,8 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn25" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-people"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn26" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Manage Users/Groups" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn26" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Manage Users" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.UserSubscriptionsCountForMunicipality.dataSet[$i].userSubscriptionsCountForMunicipality" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
@@ -42,7 +42,7 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn20_1" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-list"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn21_1" class="col-xs-9">
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn21_1" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Manage Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.CountOfFormsForMunicipality.dataSet[$i].count" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -51,15 +51,15 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn17" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="GISRecordsTile" width="240px" height="160px" class="bg-primary" on-click="GISRecordsTileClick($event, $scope)">
-                            <wm-layoutgrid height="100%" name="layoutgrid2">
-                                <wm-gridrow height="100%" name="gridrow10">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn23" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-view-list"></wm-icon>
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManualFeeTypes.invoke()">
+                            <wm-layoutgrid height="100%" name="layoutgrid7">
+                                <wm-gridrow height="100%" name="gridrow11_1">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn26_1" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-attach-money"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn24" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="GIS Maintenance" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.SubDivisonCount.dataSet[$i].SubDivisonCount" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn27" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Manual Fees" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.ManualFeeTypeCountForMunicipality.firstRecord['']" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -67,15 +67,16 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow5">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_MunicipalitySettings.invoke()">
-                            <wm-layoutgrid height="100%" name="layoutgrid5">
-                                <wm-gridrow height="100%" name="gridrow9_1">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn22_1" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-settings"></wm-icon>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn13" padding="2em unset" horizontalalign="center">
+                        <wm-tile name="GISRecordsTile" width="240px" height="160px" class="bg-primary" on-click="GISRecordsTileClick($event, $scope)">
+                            <wm-layoutgrid height="100%" name="layoutgrid2">
+                                <wm-gridrow height="100%" name="gridrow10">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn23" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-view-list"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="3em unset unset unset" horizontalalign="center" name="gridcolumn23_1" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="General Settings" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn24" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="GIS Maintenance" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.SubDivisonCount.dataSet[$i].SubDivisonCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -95,26 +96,20 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn13" padding="2em unset" horizontalalign="center">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManualFeeTypes.invoke()">
-                            <wm-layoutgrid height="100%" name="layoutgrid7">
-                                <wm-gridrow height="100%" name="gridrow11_1">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn26_1" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-attach-money"></wm-icon>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_MunicipalitySettings.invoke()">
+                            <wm-layoutgrid height="100%" name="layoutgrid5">
+                                <wm-gridrow height="100%" name="gridrow9_1">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn22_1" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-settings"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn27" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Manual Fee Types" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.ManualFeeTypeCountForMunicipality.firstRecord['']" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="3em unset unset unset" horizontalalign="center" name="gridcolumn23_1" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="General Settings" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                </wm-gridrow>
-                <wm-gridrow name="gridrow9">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn20" padding="2em unset" horizontalalign="center"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn21"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn22"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
