--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -168,7 +168,7 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-wizardstep>
-                            <wm-wizardstep name="wizardstep3" title="Location" ng-if="loaded &amp;&amp; gisRecords" enableskip="true">
+                            <wm-wizardstep name="wizardstep3" title="Location" ng-if="loaded &amp;&amp; gisRecords" enableskip="false">
                                 <wm-layoutgrid name="layoutgrid17">
                                     <wm-gridrow name="gridrow60" padding="2em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn125">
@@ -190,7 +190,7 @@
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn127">
                                             <wm-livegrid formlayout="dialog" name="livegridLocation">
                                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.stvGisData.dataSet" navigation="Classic" name="gridLocation" exportformat="EXCEL">
-                                                    <wm-grid-column binding="SubdivisionName" caption="Subdivision Name" type="string" show="true" readonly="false"></wm-grid-column>
+                                                    <wm-grid-column binding="SubdivisionName" caption="Subdivision" type="string" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="Parcel" caption="Parcel" type="string" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="Lot" caption="Lot" type="string" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="Section" caption="Section" type="string" show="true" readonly="false"></wm-grid-column>
@@ -208,7 +208,7 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-wizardstep>
-                            <wm-wizardstep name="wizardstep4" title="Vendor" ng-if="loaded &amp;&amp; vendorInfo" enableskip="true">
+                            <wm-wizardstep name="wizardstep4" title="Vendor" ng-if="loaded &amp;&amp; vendorInfo" enableskip="false">
                                 <wm-composite name="composite12" required="true" show="false">
                                     <wm-label class="col-md-3 control-label" name="label23"></wm-label>
                                     <wm-container class="col-md-9" name="container11">
@@ -339,12 +339,11 @@
                                     </wm-layoutgrid>
                                     <wm-form-field name="contactType" displayname="Contact Type" show="false" primary-key="false" generator="assigned" key="contactType" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="bind:'Owner'"></wm-form-field>
                                     <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
-                                    <wm-form-field name="gisrecords" displayname="Gisrecords" show="false" primary-key="false" generator="assigned" key="gisrecords" type="list" is-related="true" widget="select" defaultvalue="bind:{
-    &quot;id&quot;: Widgets.lfOwner.formWidgets.gisRecordSelect.datavalue
-}" placeholder="Select value" required="true"></wm-form-field>
+                                    <wm-form-field name="gisrecords" displayname="Gisrecords" show="false" primary-key="false" generator="assigned" key="gisrecords" type="list" is-related="true" widget="select" defaultvalue="bind:{&quot;id&quot;: Widgets.lfOwner.formWidgets.gisRecordSelect.datavalue}"
+                                    placeholder="Select value" required="true"></wm-form-field>
                                 </wm-liveform>
                             </wm-wizardstep>
-                            <wm-wizardstep name="wizardstep5" title="Attachments" ng-if="loaded &amp;&amp; documents" enableskip="true">
+                            <wm-wizardstep name="wizardstep5" title="Attachments" ng-if="loaded &amp;&amp; documents" enableskip="false">
                                 <wm-layoutgrid name="layoutgrid16">
                                     <wm-gridrow name="gridrow51" padding="2em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn95_2">
@@ -365,7 +364,7 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-wizardstep>
-                            <wm-wizardstep name="wizardstep6" title="Sharing" ng-if="loaded &amp;&amp; sharing" enableskip="true">
+                            <wm-wizardstep name="wizardstep6" title="Sharing" ng-if="loaded &amp;&amp; sharing" enableskip="false">
                                 <wm-layoutgrid name="layoutgrid17_1">
                                     <wm-gridrow name="gridrow53" padding="2em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn96_2">
